--- a/public/styles/common/variables.scss
+++ b/public/styles/common/variables.scss
@@ -4,14 +4,20 @@ $PrimaryColor: #20daaf;
 $SecondaryColor: #e7e9f1;
 $taglineColor: #a9b0c5;
 $menuBarColor: #112240;
+$navy:#0a192f;
 $lightNavy:  #112240;
+$lightestNavy:#233554;
+$slate: #8892b0;
 $lightSlate: #a8b2d1;
-
+$lightestSlate:#ccd6f6;;
+$navyShadow:rgba(2,12,27,0.7);
 // Fonts
+$PrimaryFont:'Calibre','Inter','San Francisco','SF Pro Text',-apple-system,system-ui,sans-serif;
 $SecondaryFont: 'SF Mono','Fira Code','Fira Mono','Roboto Mono',monospace;
 
 // Heights
 $navHeight: 100px;
+$navScrollHeight:70px;
 
 // Font-Sizes
 $xxs : 12px;
@@ -19,13 +25,16 @@ $xs: 13px;
 $sm: 14px;
 $md: 16px;
 $lr: 18px;
-
+$xl:20px;
+$xxl:22px;
+$lg:24px;
 //radius
 $border-radius: 4px;
+$borderRadius: 4px;
 
 // Hamburger Menu
 $hamburgerWidth: 24px;
-$borderRadius: 4px;
+
 $hamBefore: opacity 0.15s ease, width 0.15s ease, top 0.15s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 $hamBeforeActive: opacity 0.1s ease-out, width 0.1s ease-out, top 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
 $hamAfter: opacity 0.15s ease, transform 0.15s cubic-bezier(0.55, 0.055, 0.675, 0.19), bottom 0.15s ease;
@@ -34,8 +43,13 @@ $hamAfterActive: opacity 0.1s ease-out, transform 0.1s cubic-bezier(0.215, 0.61,
 //sideBar
 $fzSm: 14px;
 $fzLg: 24px;
+$fzHeading: 32px;
 $fontMono: monospace;
 
 //transitions
 $SideBarTransition: all 0.3s ease-in-out;
 $transition:all 0.25s cubic-bezier(0.645,0.045,0.355,1);
+
+// jobs section
+$tabHeight: 42px;
+$tabWidth: 120px;
