Added Projects section and fixed some bugs

--- a/public/styles/common/variables.scss
+++ b/public/styles/common/variables.scss
@@ -11,6 +11,7 @@ $slate: #8892b0;
 $lightSlate: #a8b2d1;
 $lightestSlate:#ccd6f6;;
 $navyShadow:rgba(2,12,27,0.7);
+$White:#e6f1ff;
 // Fonts
 $PrimaryFont:'Calibre','Inter','San Francisco','SF Pro Text',-apple-system,system-ui,sans-serif;
 $SecondaryFont: 'SF Mono','Fira Code','Fira Mono','Roboto Mono',monospace;
