--- a/public/styles/globals.scss
+++ b/public/styles/globals.scss
@@ -1,4 +1,5 @@
 @import "../styles/common/variables.scss";
+@import "../styles/common/mixins.scss";
 *,
 *::after,
 *::before {
@@ -27,18 +28,26 @@ body {
 }
 
 a{
+  display: inline-block;
+  text-decoration: none;
+  text-decoration-skip-ink: auto;
   color: inherit;
+  position: relative;
   transition: $transition;
-
+  &:hover,&:focus{
+    color: $PrimaryColor;
+  }
 }
 // .blur{
 //   filter: blur(4px); /* Adjust the blur intensity as needed */
 // }
-
+li{
+  list-style-type: none;
+}
 section{
   padding: 100px 0;
   margin: 0px auto;
-  max-width: 1000px;
+  max-width: 900px;
 }
 
 .mainContainer{
